# stt-model-manager

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  package.json  setup.cfg
.github/: pull_request_template.md
.github/workflows/: build-and-test.yml  lint.yml  pypi-release.yml
config/: env.js  paths.js  webpack.config.js
coqui_stt_model_manager/: __main__.py  modelmanager.py  server.py
coqui_stt_model_manager/static/: style.css
coqui_stt_model_manager/templates/: base.html  index.html  transcribe.html
coqui_stt_server/: __main__.py  modelmanager.py  server.py
coqui_stt_server/static/: style.css  transcribe.js
coqui_stt_server/templates/: base.html  index.html  model_install.html  transcribe.html
public/: downsampling_worker.js
scripts/: build.js  start.js
src/: App.js  App.jsx  index.jsx
test/: server.test.js  test_server.py
