[metadata]
name = coqui_stt_server
author = Coqui GmbH
author_email = info@coqui.ai
url = https://github.com/coqui-ai/stt-server
license = MPL-2.0
version = 0.0.1
description = A local server for Coqui STT models
long_description = file: README.md, LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Speech
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    Jinja2==3.0.1
    Flask==2.0.1
    Flask-Cors==3.0.10
python_requires = >= 3.6, <4

[options.package_data]
coqui_stt_server = templates/*

[options.entry_points]
console_scripts =
    stt-server = coqui_stt_server.__main__:main
