[metadata]
name = coqui_stt_model_manager
author = Coqui GmbH
author_email = info@coqui.ai
url = https://github.com/coqui-ai/stt-model-manager
license = MPL-2.0
version = file: VERSION
description = Model management and testing tool for Coqui STT models
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Speech
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
    Jinja2==3.0.1
    Flask==2.0.1
    Flask-Cors==3.0.10
    pyxdg==0.27
    coqpit==0.0.9
    Flask-SocketIO==4.3.2
    webrtcvad==2.0.10
    stt==0.10.0a6
    requests==2.25.1
python_requires = >= 3.7, <4

[options.package_data]
coqui_stt_model_manager = templates/*, static/build/*, static/build/static/js/*, static/build/static/css/*

[options.entry_points]
console_scripts =
    stt-model-manager = coqui_stt_model_manager.__main__:main
